[package]
name = "mini_http"
version = "0.1.0"
description = "Simple HTTP server built on mio"
license = "MIT"
edition = "2021"

[dependencies]
error-chain = "0.12"
mio = { git = "https://github.com/haraldh/mio", branch = "combine_events", features=[ "os-poll", "net" ] }
slab = "0.4"
httparse = "1"
http = "0.1"
log = "0.4"
simple_logger = "2.1"
rand = "0.8.5"
